RESOLVED FIXED283700
[JSC] Set `JSValue` instead of `JSObject` as `JSWrapForValidIterator` internal fields
https://bugs.webkit.org/show_bug.cgi?id=283700
Summary [JSC] Set `JSValue` instead of `JSObject` as `JSWrapForValidIterator` interna...
Sosuke Suzuki
Reported 2024-11-25 23:16:00 PST
This patch changes to set `JSValue` instead of `JSObject` as `JSWrapForValidIterator` internal fields.
Attachments
Sosuke Suzuki
Comment 1 2024-11-25 23:16:51 PST
EWS
Comment 2 2024-11-26 18:10:12 PST
Committed 287108@main (6390d9eba9d9): <https://commits.webkit.org/287108@main> Reviewed commits have been landed. Closing PR #37147 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-11-26 18:11:14 PST
Note You need to log in before you can comment on or make changes to this bug.