[JSC] Set `JSValue` instead of `JSObject` as `JSWrapForValidIterator` internal fields https://bugs.webkit.org/show_bug.cgi?id=283700

Reviewed by Yusuke Suzuki.

This patch changes to set `JSValue` instead of `JSObject` as
`JSWrapForValidIterator` internal fields.

* Source/JavaScriptCore/runtime/JSWrapForValidIterator.cpp:
(JSC::JSWrapForValidIterator::createWithInitialValues):
(JSC::JSWrapForValidIterator::create):
(JSC::JSWrapForValidIterator::finishCreation):
(JSC::JSC_DEFINE_HOST_FUNCTION):
* Source/JavaScriptCore/runtime/JSWrapForValidIterator.h:

Canonical link: https://commits.webkit.org/287108@main