Source/JavaScriptCore/runtime/JSWrapForValidIterator.cpp
@@ -36,17 +36,24 @@ const ClassInfo JSWrapForValidIterator::s_info = { "Iterator"_s, &Base::s_info, 
 
 JSWrapForValidIterator* JSWrapForValidIterator::createWithInitialValues(VM& vm, Structure* structure)
 {
+    auto values = initialValues();
     JSWrapForValidIterator* iterator = new (NotNull, allocateCell<JSWrapForValidIterator>(vm)) JSWrapForValidIterator(vm, structure);
-    iterator->finishCreation(vm);
+    iterator->finishCreation(vm, values[0], values[1]);
     return iterator;
 }
 
-void JSWrapForValidIterator::finishCreation(VM& vm)
+JSWrapForValidIterator* JSWrapForValidIterator::create(VM& vm, Structure* structure, JSValue iterator, JSValue nextMethod)
+{
+    JSWrapForValidIterator* result = new (NotNull, allocateCell<JSWrapForValidIterator>(vm)) JSWrapForValidIterator(vm, structure);
+    result->finishCreation(vm, iterator, nextMethod);
+    return result;
+}
+
+void JSWrapForValidIterator::finishCreation(VM& vm, JSValue iterator, JSValue nextMethod)
 {
     Base::finishCreation(vm);
-    auto values = initialValues();
-    for (unsigned index = 0; index < values.size(); ++index)
-        Base::internalField(index).set(vm, this, values[index]);
+    this->setIteratedIterator(vm, iterator);
+    this->setIteratedNextMethod(vm, nextMethod);
 }
 
 template<typename Visitor>
@@ -61,15 +68,7 @@ DEFINE_VISIT_CHILDREN(JSWrapForValidIterator);
 
 JSC_DEFINE_HOST_FUNCTION(wrapForValidIteratorPrivateFuncCreate, (JSGlobalObject* globalObject, CallFrame* callFrame))
 {
-    VM& vm = globalObject->vm();
-
-    auto* wrapForValidIterator = JSWrapForValidIterator::createWithInitialValues(vm, globalObject->wrapForValidIteratorStructure());
-    if (callFrame->uncheckedArgument(0).isCell())
-        wrapForValidIterator->setIteratedIterator(vm, asObject(callFrame->uncheckedArgument(0)));
-    if (callFrame->uncheckedArgument(1).isCell())
-        wrapForValidIterator->setIteratedNextMethod(vm, asObject(callFrame->uncheckedArgument(1)));
-
-    return JSValue::encode(wrapForValidIterator);
+    return JSValue::encode(JSWrapForValidIterator::create(globalObject->vm(), globalObject->wrapForValidIteratorStructure(), callFrame->uncheckedArgument(0), callFrame->uncheckedArgument(1)));
 }
 
 } // namespace JSC
