Source/JavaScriptCore/runtime/JSWrapForValidIterator.h
@@ -64,12 +64,13 @@ public:
     inline static Structure* createStructure(VM&, JSGlobalObject*, JSValue);
 
     static JSWrapForValidIterator* createWithInitialValues(VM&, Structure*);
+    static JSWrapForValidIterator* create(VM&, Structure*, JSValue iterator, JSValue nextMethod);
 
     JSObject* iteratedIterator() const { return jsCast<JSObject*>(internalField(Field::IteratedIterator).get()); }
     JSObject* iteratedNextMethod() const { return jsCast<JSObject*>(internalField(Field::IteratedNextMethod).get()); }
 
-    void setIteratedIterator(VM& vm, JSObject* iterator) { internalField(Field::IteratedIterator).set(vm, this, iterator); }
-    void setIteratedNextMethod(VM& vm, JSObject* nextMethod) { internalField(Field::IteratedNextMethod).set(vm, this, nextMethod); }
+    void setIteratedIterator(VM& vm, JSValue iterator) { internalField(Field::IteratedIterator).set(vm, this, iterator); }
+    void setIteratedNextMethod(VM& vm, JSValue nextMethod) { internalField(Field::IteratedNextMethod).set(vm, this, nextMethod); }
 
 private:
     JSWrapForValidIterator(VM& vm, Structure* structure)
@@ -77,7 +78,7 @@ private:
     {
     }
 
-    void finishCreation(VM&);
+    void finishCreation(VM&, JSValue iterator, JSValue nextMethod);
     DECLARE_VISIT_CHILDREN;
 };
 
